<resources>
    <string name="app_name">ImageApp</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="photos_fragment_label">Photos</string>
    <string name="collections_fragment_label">Collections</string>
    <string name="user_fragment_label">User</string>
    <string name="login_via_unsplash">login via unsplash</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="track_statistics">Track statistics</string>
    <string name="download_your_favorite_shots">Download your favorite shots</string>

    <string name="auth_canceled">Authentication failed</string>
    <string name="corrupt_access_token">Corrupt access token</string>
    <string name="get_user_info">Get user info</string>
    <string name="get_user_error">Get user error</string>
    <string name="logout">logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="welcome_picture">Welcome picture</string>
    <string name="welcome">Welcome!</string>
    <string name="create_pictures_publish_gather_an_audience_get_feedback">Create pictures, publish, gather an audience, get feedback.</string>
    <string name="next">Next</string>
    <string name="download_your_favorite_pictures_and_track_statistics">Download your favorite pictures and track statistics.</string>
    <string name="gather_collections">Gather collections!</string>
    <string name="gather_collections_picture">Gather collections picture</string>
    <string name="show_your_collections_to_your_friends">Show your collections to your friends.</string>
    <string name="share_with_friends_title">Share with friends!</string>
    <string name="share_with_friends_picture">Share with friends picture</string>
    <string name="leave_feedback_picture">Leave feedback picture</string>
    <string name="leave_feedback">Leave feedback!</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="unsplash_logo">Unsplash logo</string>
    <string name="photo">Photo</string>
    <string name="photo_author_avatar">Photo author avatar</string>
    <string name="at_char">\@</string>
    <string name="likes_icon">Likes icon</string>
    <string name="underscored_download"><u>Download</u></string>
    <string name="permission_is_required_to_download_and_save_the_file">Permission is required to download and save the file</string>
    <string name="grant_permission">Grant permission\n\n\n</string>
    <string name="permission_is_required_to_show_location">Permission is required to show location</string>
    <string name="loading_dot_dot_dot">loading…</string>
    <string name="share_photo_icon">Share Photo icon</string>
    <string name="location_icon">Location icon</string>
    <string name="made_with">Made with:</string>
    <string name="model">Model:</string>
    <string name="exposure">Exposure:</string>
    <string name="aperture">Aperture:</string>
    <string name="focallength">FocalLength:</string>
    <string name="iso">ISO:</string>
    <string name="about">About</string>
    <string name="semicolon">:</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="download_icon">Download icon</string>
    <string name="search_fragment_label">Search</string>
    <string name="photo_details_fragment_label">Photo Details</string>
    <string name="login_fragment_label">Login</string>
    <string name="collection_cover">Collection cover</string>
    <string name="images_by">images by</string>
    <string name="top_today">Top today</string>
    <string name="collection_photos">Collection Photos</string>
    <string name="logout_menu_item">Logout</string>
    <string name="are_you_sure_you_want_to_logout_all_local_data_will_be_deleted">Are you sure you want to logout? All local data will be deleted.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="photos_tab_item">Photos</string>
    <string name="liked_tab_item">Liked</string>
    <string name="collections_tab_item">Collections</string>
    <string name="photos_tab">Photos</string>
    <string name="liked_tab">Liked</string>
    <string name="collections_tab">Collections</string>
</resources>