<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayoutPhotoDetails"
    tools:context=".presentation.PhotoDetailsFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/photo"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@color/black_transparent">

            <TextView
                android:id="@+id/textViewAuthorName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="1"
                android:text="@string/loading_dot_dot_dot"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Andrew Porto" />

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/photo_author_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewAtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/at_char"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewSharePhoto"
                app:layout_constraintStart_toStartOf="@+id/textViewAuthorName"
                app:layout_constraintTop_toTopOf="@+id/imageViewSharePhoto" />

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/loading_dot_dot_dot"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/imageViewSharePhoto"
                app:layout_constraintStart_toEndOf="@+id/textViewAtLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewAtLabel"
                tools:text="andrew_porto" />

            <ImageView
                android:id="@+id/imageViewLikeYesNo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/likes_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/like_no" />

            <TextView
                android:id="@+id/textViewTotalLikeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewLikeYesNo"
                app:layout_constraintEnd_toStartOf="@+id/imageViewLikeYesNo"
                app:layout_constraintTop_toTopOf="@+id/imageViewLikeYesNo"
                tools:text="1508" />

            <ImageView
                android:id="@+id/imageViewSharePhoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/share_photo_icon"
                android:src="@drawable/baseline_share_24_white"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTotalLikeCount"
                app:layout_constraintEnd_toStartOf="@+id/textViewTotalLikeCount"
                app:layout_constraintTop_toTopOf="@+id/textViewTotalLikeCount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/imageViewLocationMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/location_icon"
        android:src="@drawable/location_mark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLocationMark"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/imageViewLocationMark"
        app:layout_constraintTop_toTopOf="@+id/imageViewLocationMark"
        tools:text="San Francisco, CA" />

    <TextView
        android:id="@+id/textViewTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageViewLocationMark"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLocationMark"
        tools:text="#woman #model #nature #rights #womanrights" />

    <TextView
        android:id="@+id/textViewMadeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/made_with"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewTags"
        app:layout_constraintTop_toBottomOf="@+id/textViewTags" />

    <TextView
        android:id="@+id/textViewMade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMadeLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/textViewMadeLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewMadeLabel"
        tools:text="Canon" />

    <TextView
        android:id="@+id/textViewModelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/model"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewMadeLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewMadeLabel" />

    <TextView
        android:id="@+id/textViewModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewModelLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewModelLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewModelLabel"
        tools:text="EOS 40D" />

    <TextView
        android:id="@+id/textViewExposureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/exposure"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewModelLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewModelLabel" />

    <TextView
        android:id="@+id/textViewExposure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewExposureLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewExposureLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewExposureLabel"
        tools:text="0.01s" />

    <TextView
        android:id="@+id/textViewApertureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/aperture"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewExposureLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewExposureLabel" />

    <TextView
        android:id="@+id/textViewAperture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApertureLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewApertureLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewApertureLabel"
        tools:text="4.970854" />

    <TextView
        android:id="@+id/textViewFocalLengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/focallength"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewApertureLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewApertureLabel" />

    <TextView
        android:id="@+id/textViewFocalLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFocalLengthLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewFocalLengthLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewFocalLengthLabel"
        tools:text="37" />

    <TextView
        android:id="@+id/textViewIsoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/iso"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewFocalLengthLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewFocalLengthLabel" />

    <TextView
        android:id="@+id/textViewIso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewIsoLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewIsoLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewIsoLabel"
        tools:text="100" />

    <TextView
        android:id="@+id/textViewAboutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/about"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMade"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textViewMade" />

    <TextView
        android:id="@+id/textViewAtLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/at_char"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAboutLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewAboutLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewAboutLabel" />

    <TextView
        android:id="@+id/textViewUserName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAtLabel2"
        app:layout_constraintStart_toEndOf="@+id/textViewAtLabel2"
        app:layout_constraintTop_toTopOf="@+id/textViewAtLabel2"
        tools:text="alexosesso" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewAboutLabel">

        <TextView
            android:id="@+id/textViewAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"

            android:fontFamily="@font/roboto"

            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewAboutLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewAboutLabel"
            tools:text="Dreamer, creator. Strong man, stronger passion" />

    </ScrollView>

    <TextView
        android:id="@+id/textViewColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/semicolon"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUserName2"
        app:layout_constraintStart_toEndOf="@+id/textViewUserName2"
        app:layout_constraintTop_toTopOf="@+id/textViewUserName2" />

    <TextView
        android:id="@+id/textViewDownloadLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/underscored_download"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLocation"
        app:layout_constraintEnd_toStartOf="@+id/textViewLeftBracketLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewLocation" />

    <TextView
        android:id="@+id/textViewLeftBracketLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/roboto"
        android:text="@string/left_bracket"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDownloadLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewDownloads"
        app:layout_constraintTop_toTopOf="@+id/textViewDownloadLabel" />

    <TextView
        android:id="@+id/textViewDownloads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDownloadLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewRightBracketLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewDownloadLabel"
        tools:text="6717" />

    <TextView
        android:id="@+id/textViewRightBracketLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/right_bracket"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDownloadLabel"
        app:layout_constraintEnd_toStartOf="@+id/imageViewDownloadIcon"
        app:layout_constraintTop_toTopOf="@+id/textViewDownloadLabel" />

    <ImageView
        android:id="@+id/imageViewDownloadIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/download_icon"
        android:src="@drawable/baseline_download_24"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDownloadLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDownloadLabel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>