<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/textViewLogoutQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_logout_all_local_data_will_be_deleted"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogoutNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#D5D6D6"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/no"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogoutYes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogoutQuestion" />

    <Button
        android:id="@+id/buttonLogoutYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLogoutNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonLogoutNo"
        app:layout_constraintTop_toTopOf="@+id/buttonLogoutNo" />
</androidx.constraintlayout.widget.ConstraintLayout>